# MicroVE

./: .gitignore  CMakeLists.txt  README.md  mve.c  mve.h  test.c
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.c
examples/hello_world_memory/: CMakeLists.txt  main.c  script.h
src/: CMakeLists.txt  config.h  defines.h  mve.c  mve.h
